cloudformation-template/test/sg.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: "Network Redux CloudFormation- Test Security Group"

Parameters:
  Environment:
    Description: Test Environment
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/build/environment/test'
  Client:
        Description: Client Name
        Type: 'AWS::SSM::Parameter::Value<String>'
        Default: '/test/client'  


    Resources:
      sgrpbastionssh:
        Type: AWS::EC2::SecurityGroup
        Properties:
          GroupName: !Sub 'sgrp-${Environment}-${Client}-ssh'
          GroupDescription: Security Group for SSH access to Test environment
          VpcId: 
              Fn::ImportValue:
               !Sub 'vpc-${Environment}-${Client}-${AWS::Region}-VPCId'
          SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: '22'
            ToPort: '22'
            CidrIp: 216.223.20.132/32
          - IpProtocol: tcp
            FromPort: '22'
            ToPort: '22'
            CidrIp: 10.10.10.0/24
          - IpProtocol: tcp
            FromPort: '22'
            ToPort: '22'
            CidrIp: 10.10.15.0/24         
          Tags:
            - Key: Name
              Value: !Sub 'sgrp-${Environment}-${Client}-ssh'

      sgrppubtoweb:
        Type: AWS::EC2::SecurityGroup
        Properties:
          GroupName: !Sub 'sgrp-${Environment}-${Client}-web'
          GroupDescription: Security Group for Test Web access
          VpcId: 
              Fn::ImportValue:
               !Sub 'vpc-${Environment}-${Client}-${AWS::Region}-VPCId'
          SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: '80'
            ToPort: '80'
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: '443'
            ToPort: '443'
            CidrIp: 0.0.0.0/0
          Tags:
            - Key: Name
              Value: !Sub 'sgrp-${Environment}-${Client}-web'

      sgrptoefs:
        Type: AWS::EC2::SecurityGroup
        Properties:
          GroupName: !Sub 'sgrp-${Environment}-${Client}-efs'
          GroupDescription: Security Group for Test EFS access
          VpcId: 
              Fn::ImportValue:
               !Sub 'vpc-${Environment}-${Client}-${AWS::Region}-VPCId'
          SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: '2049'
            ToPort: '2049'
            CidrIp: 10.10.10.0/24
          - IpProtocol: tcp
            FromPort: '2049'
            ToPort: '2049'
            CidrIp: 10.10.15.0/24
          - IpProtocol: tcp
            FromPort: '2049'
            ToPort: '2049'
            CidrIp: 10.20.10.0/24
          - IpProtocol: tcp
            FromPort: '2049'
            ToPort: '2049'
            CidrIp: 10.20.15.0/24            
          Tags:
            - Key: Name
              Value: !Sub 'sgrp-${Environment}-${Client}-efs'

      sgrpbastiontowebmysql:
        Type: AWS::EC2::SecurityGroup
        Properties:
          GroupName: !Sub 'sgrp-${Environment}-${Client}-mysql'
          GroupDescription: Security Group for Mysql access from bastion environment
          VpcId: 
              Fn::ImportValue:
               !Sub 'vpc-${Environment}-${Client}-${AWS::Region}-VPCId'
          SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: '3306'
            ToPort: '3306'
            CidrIp: 10.10.15.0/24
          - IpProtocol: tcp
            FromPort: '3306'
            ToPort: '3306'
            CidrIp: 10.10.10.0/24
          Tags:
            - Key: Name
              Value: !Sub 'sgrp-${Environment}-${Client}-mysql'

    Outputs:
      sgrpbastionssh:
        Value: !Ref sgrpbastionssh
        Export:
          Name: !Sub 'sgrp-${Environment}-${Client}-ssh'
      sgrppubtoweb:
        Value: !Ref sgrppubtoweb
        Export:
          Name: !Sub 'sgrp-${Environment}-${Client}-web'
      sgrptoefs:
        Value: !Ref sgrptoefs
        Export:
          Name: !Sub 'sgrp-${Environment}-${Client}-efs'  
      sgrpbastiontowebmysql:
        Value: !Ref sgrpbastiontowebmysql
        Export:
          Name: !Sub 'sgrp-${Environment}-${Client}-mysql'
